feat: ajout utilitaires responsive font-size and readme

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,7 +1,7 @@
 <section class="section u-flex u-mob-flex-col" style="min-height: 100%;height: auto;">
-     <div class="u-p-11 u-mob-p-8 u-m-auto lt-stack u-h-full u-basis-2-3">
+     <div class="u-p-11 u-mob-p-4 u-m-auto lt-stack u-h-full u-basis-2-3">
          <div class="lt-frame lt-frame--gap-8 u-m-auto">
-             <h1 id="page-title" class="u-fs-7">LTDS Design System</h1>
+             <h1 class="u-fs-7"><span id="page-title">LTDS</span> Design System</h1>
              <div class="lt-frame">
                  <h2 id="page-subtitle" class="">Une vision modulaire et cohérente du design front-end</h2>
                  <p id="jumbo-description" class="u-lh-3 u-text-secondary"> Avec 6 ans d’expérience en développement front-end, je conçois des interfaces web robustes et centrées sur l’utilisateur.  
@@ -24,11 +24,11 @@
              </div>
         </div>
      </div>
-     <div class="lt-stack u-mob-p-8 u-w-full">
+     <div class="lt-stack u-mob-p-4 u-w-full">
         <section class="splide u-w-full u-h-full u-p-8 u-mob-p-0" aria-label="Splide Basic HTML Example">
             <div class="splide__track u-h-full">
                 <ul class="splide__list">
-                    <li class="splide__slide ltds-card ltds-card--no-border u-radii-6">
+                    <li class="splide__slide ltds-card ltds-card--no-border u-radii-6 u-mob-p-0">
                         <div class="ltds-card-grid u-h-full u-p-4"></div>
                     </li>
                     <li class="splide__slide">
