--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,9 +1,9 @@
 <section class="section u-flex u-mob-flex-col" style="min-height: 100%;height: auto;">
      <div class="u-p-11 u-mob-p-4 u-m-auto lt-stack u-h-full u-basis-2-3">
          <div class="lt-frame lt-frame--gap-8 u-m-auto">
-             <h1 class="u-fs-7"><span id="page-title">LTDS</span> Design System</h1>
+             <h1 class="u-fs-7 u-mob-fs-5"><span id="page-title">LTDS</span> Design System</h1>
              <div class="lt-frame">
-                 <h2 id="page-subtitle" class="">Une vision modulaire et cohérente du design front-end</h2>
+                 <h2 id="page-subtitle" class="u-mob-fs-3">Une vision modulaire et cohérente du design front-end</h2>
                  <p id="jumbo-description" class="u-lh-3 u-text-secondary"> Avec 6 ans d’expérience en développement front-end, je conçois des interfaces web robustes et centrées sur l’utilisateur.  
       Mon approche met l’accent sur un code propre, maintenable et une intégration UI fluide.</p>
              </div>
