feat: add new utilities to factory

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/leviathan.css">
-    <link rel="stylesheet" href="/fonts/icon-font/icons.css">
+    <link rel="stylesheet" href="/icon-font/icons.css">
     <!-- <link rel="stylesheet" href="src/vendors/splide-slide.min.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-tomorrow.min.css">
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
