--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -1,77 +1,88 @@
-<nav class="navbar">
+<nav class="navbar u-mob-p-3">
     <div class="navbar-left">
         <a href="/" class="u-display-flex">
             <img id="page-logotype" class="u-object-fit-cover" src="/assets/pictures/logotype.svg" alt="logo" width="48">
         </a>
     </div>
-    <ul class="navbar-right ltds-menu">
-        <li class="ltds-menu-item">
-            <div class="ltds-menu-label">Bases<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
-            <ul class="ltds-menu-submenu u-grid u-grid-12">
-                <a href="/design-system/reset" class="u-col-span-6">
-                    <li>Reset</li>
-                </a>
-                <a href="/design-system/tokens" class="u-col-span-6">
-                    <li>Tokens</li>
-                </a>
-                <a href="/design-system/colors" class="u-col-span-6">
-                    <li>Colors</li>
-                </a>
-                <a href="/design-system/utilities" class="u-col-span-6">
-                    <li>Utilities</li>
-                </a>
-                <a href="/design-system/accessibility" class="u-col-span-6">
-                    <li>Accessibility</li>
-                </a>
-                <a href="/design-system/dimensions" class="u-col-span-6">
-                    <li>Dimensions</li>
-                </a>
-                <a href="/design-system/flexboxes" class="u-col-span-6">
-                    <li>Flexboxes</li>
-                </a>
-                <a href="/design-system/grids" class="u-col-span-6">
-                    <li>Grids</li>
-                </a>
-                <a href="/design-system/layouts" class="u-col-span-6">
-                    <li>Layouts</li>
-                </a>
-                <a href="/design-system/spacings" class="u-col-span-6">
-                    <li>Spacings</li>
-                </a>
-            </ul>
-        </li>
-
-        <li class="ltds-menu-item">
-            <div class="ltds-menu-label">Atoms<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
-            <ul class="ltds-menu-submenu u-grid u-grid-12">
-                <a href="/design-system/buttons" class="u-col-span-6">
-                    <li>Buttons</li>
-                </a>
-                <a href="/design-system/inputs" class="u-col-span-6">
-                    <li>Inputs</li>
-                </a>
-                <a href="/design-system/links" class="u-col-span-6">
-                    <li>Links</li>
-                </a>
-                <a href="/design-system/avatars" class="u-col-span-6">
-                    <li>Avatars</li>
-                </a>
-                <a href="/design-system/icons" class="u-col-span-6">
-                    <li>Icons</li>
-                </a>
-            </ul>
-        </li>
-        <li class="menu-molecules">
-            <span>
-                Molecules
-                <i class="icon lt-icon-caret-down icon-size-lg"></i>
-            </span>
-        </li>
-        <a href="/">
-            <li>
-                <!-- home -->
-                <i class="icon lt-icon-home icon-size-lg"></i>
+    <ul class="navbar-right">
+        <!-- menu desktop  -->
+        <div class="ltds-menu u-display-mob-none">
+            <li class="ltds-menu-item">
+                <div class="ltds-menu-label">Bases<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
+                <ul class="ltds-menu-submenu u-grid u-grid-12">
+                    <a href="/design-system/reset" class="u-col-span-6">
+                        <li>Reset</li>
+                    </a>
+                    <a href="/design-system/tokens" class="u-col-span-6">
+                        <li>Tokens</li>
+                    </a>
+                    <a href="/design-system/colors" class="u-col-span-6">
+                        <li>Colors</li>
+                    </a>
+                    <a href="/design-system/utilities" class="u-col-span-6">
+                        <li>Utilities</li>
+                    </a>
+                    <a href="/design-system/accessibility" class="u-col-span-6">
+                        <li>Accessibility</li>
+                    </a>
+                    <a href="/design-system/dimensions" class="u-col-span-6">
+                        <li>Dimensions</li>
+                    </a>
+                    <a href="/design-system/flexboxes" class="u-col-span-6">
+                        <li>Flexboxes</li>
+                    </a>
+                    <a href="/design-system/grids" class="u-col-span-6">
+                        <li>Grids</li>
+                    </a>
+                    <a href="/design-system/layouts" class="u-col-span-6">
+                        <li>Layouts</li>
+                    </a>
+                    <a href="/design-system/spacings" class="u-col-span-6">
+                        <li>Spacings</li>
+                    </a>
+                </ul>
             </li>
-        </a>
+    
+            <li class="ltds-menu-item">
+                <div class="ltds-menu-label">Atoms<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
+                <ul class="ltds-menu-submenu u-grid u-grid-12">
+                    <a href="/design-system/buttons" class="u-col-span-6">
+                        <li>Buttons</li>
+                    </a>
+                    <a href="/design-system/inputs" class="u-col-span-6">
+                        <li>Inputs</li>
+                    </a>
+                    <a href="/design-system/links" class="u-col-span-6">
+                        <li>Links</li>
+                    </a>
+                    <a href="/design-system/avatars" class="u-col-span-6">
+                        <li>Avatars</li>
+                    </a>
+                    <a href="/design-system/icons" class="u-col-span-6">
+                        <li>Icons</li>
+                    </a>
+                </ul>
+            </li>
+            <li class="ltds-menu-item">
+                <div class="ltds-menu-label">Molecules<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
+                <ul class="ltds-menu-submenu u-grid u-grid-12">
+                    <a href="/design-system/cards" class="u-col-span-12">
+                        <li>Cards</li>
+                    </a>
+                </ul>
+            </li>
+            <a href="/">
+                <li>
+                    <!-- home -->
+                    <i class="icon lt-icon-home icon-size-lg"></i>
+                </li>
+            </a>
+        </div>
+        <!-- menu mobile burger  -->
+        <div class="ltds-menu u-display-none u-display-mob-flex">
+            <button class="ltds-btn ltds-btn--sm ltds-btn--ghost ltds-btn--shape">
+                <i class="icon lt-icon-burger icon-size-xl"></i>
+            </button>
+        </div>
     </ul>
 </nav>
