--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-css.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-js.min.js"></script>
   </head>
-  <body data-scheme="2" id="page-gradient">
+  <!-- data-scheme="2" -->
+  <body id="page-gradient">
     <div id="menu-nav"></div>
     <div id="app">
       <main id="main"></main>
@@ -25,7 +26,7 @@
     <modal-dialog id="modal-test" modal-title="Passion Frontend" class="modal modal-color-scheme-primary" max-width="480">
       <div class="lt-frame lt-frame--gap-6">
         <!-- <p class="u-min-h-160">modal test</p> -->
-        <p id="jumbo-description-2" class="u-text-secondary u-lh-2">My expertise spans the full front-end development lifecycle, from building responsive interfaces to designing and maintaining scalable design systems. I work collaboratively in agile environments, consistently delivering high-quality code and contributing to product improvement through thoughtful UI/UX implementation.</p>
+        <p id="jumbo-description-2" class="u-text-secondary u-lh-2">Mon expertise couvre l’ensemble du cycle de développement front-end, depuis la création d’interfaces responsives jusqu’à la conception et la maintenance de design systems évolutifs. Je travaille en collaboration dans des environnements agiles, en livrant constamment un code de haute qualité et en contribuant à l’amélioration du produit grâce à des mises en œuvre UI/UX réfléchies.</p>
         <button class="ltds-btn ltds-btn--lg u-w-full" data-modal-dismiss>
           <span class="ltds-btn-label">Close</span>
         </button>
